--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image/x-icon" href="/icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script src="./scrollControll.ts" defer></script>
 		<title>Развитие</title>
 	</head>
 	<body>
